# bede

./: .gitignore  .mcp.json  CLAUDE.md.example  Dockerfile  Makefile  bot.py  collect_sessions.py  pyproject.toml  scheduler.py  supervisord.conf  user.md.example
.github/workflows/: bede-core-ci.yml  bede-data-ci.yml  bede-data-mcp-ci.yml  build-push.yml
bede-core/: Dockerfile  mcp.json  pyproject.toml
bede-core/scripts/: entrypoint.sh
bede-core/src/bede_core/: __main__.py  bot.py  claude_cli.py  config.py  data_client.py  main.py  memory_manager.py  quiet_hours.py  reflection.py  scheduler.py  session_manager.py  telegram_format.py
bede-core/tests/: test_bot.py  test_claude_cli.py  test_config.py  test_data_client.py  test_memory_manager.py  test_quiet_hours.py  test_reflection.py  test_scheduler.py  test_session_manager.py  test_telegram_format.py
bede-data/: Dockerfile  pyproject.toml
bede-data-mcp/: Dockerfile  pyproject.toml
bede-data-mcp/src/bede_data_mcp/: __main__.py  client.py  config.py  server.py
bede-data-mcp/tests/: conftest.py  test_analytics_tools.py  test_client.py  test_config_tools.py  test_goal_tools.py  test_health_tools.py  test_location_tools.py  test_memory_tools.py  test_misc_tools.py  test_time_tools.py  test_vault_tools.py
bede-data/src/bede_data/: app.py  config.py  tz.py
bede-data/src/bede_data/analytics/: engine.py  signals.py
bede-data/src/bede_data/api/: analytics.py  config_api.py  conversations.py  freshness.py  goals.py  health.py  location.py  memories.py  message_queue.py  retention.py  sessions.py  storage.py  task_log.py  vault_data.py  vault_queue.py  weather.py
bede-data/src/bede_data/db/: connection.py  schema.py
bede-data/src/bede_data/ingest/: auth.py  health_parser.py  router.py  vault_parser.py
bede-data/src/bede_data/live/: air_quality.py  location.py  weather.py
bede-data/tests/: conftest.py  test_analytics_engine.py  test_api_analytics.py  test_api_config.py  test_api_conversations.py  test_api_freshness.py  test_api_goals.py  test_api_health.py  test_api_location.py  test_api_memories.py  test_api_message_queue.py  test_api_sessions.py  test_api_storage.py  test_api_task_log.py  test_api_vault_data.py  test_api_vault_queue.py  test_app.py  test_db.py  test_ingest_health.py  test_ingest_vault.py  test_live_location.py  test_live_weather.py  test_retention.py  test_tz.py
data-ingest/: health_parser.py
data-mcp/: server.py
data-mcp/sources/: location.py  (+1 more)
scripts/: entrypoint.sh
tests/: test_interactive.py
(+4 files in other folders)
