[project]
name = "bede"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot==21.10",
    "python-dotenv>=1.0.1",
    "APScheduler==3.10.4",
    "PyYAML==6.0.2",
    "starlette>=0.41",
    "uvicorn>=0.32",
    "fastmcp>=2.0",
    "httpx>=0.27",
    "workspace-mcp>=1.17",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["data-ingest/tests", "data-mcp/tests"]
