[project]
name = "bede-core"
version = "0.1.0"
description = "Bede brain: Telegram bot, scheduler, session manager, memory manager"
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot==21.10",
    "APScheduler==3.10.4",
    "httpx>=0.28.0",
    "pydantic-settings>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bede_core"]

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
